# remedia

./: .cursorrules  .gitignore  .oxlintrc.json  .prettierignore  .prettierrc  AGENTS.md  AUTONOMOUS_WORK_SUMMARY.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  README.md  TODO.md  WINDOW_TESTING_RESULTS.md  WSL2_TEST_RESULTS.md  biome.json  biome.jsonc  bunfig.toml  cspell.json  deno.json  eslint.config.js  index.html  package.json  playwright.config.ts  svelte.config.js  test-window-routing.sh  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts  vitest.config.ts  wdio.conf.ts
.beads/: config.yaml  issues.jsonl
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: build.yml  ci.yml  e2e.yml  test.yml
.junie/: guidelines.md
benchmarks/: url_matching.ts
docs/: architecture.md  dev-setup.md  ipc-contracts.md  release-smoke-checklist.md  structured-logging.md  tasks.md
e2e/: app.spec.ts  real-download.spec.ts
e2e/helpers/: tauri-helpers.ts
project.inlang/: project_id  settings.json
scripts/: debug-thumb.js  real-download-e2e.ts  remote-console.ts  remote-e2e.ts  test-thumb.js
specs/: IMPLEMENTATION_PLAN.md  SPEC.md  app-improvements.md
src/: App.css  App.tsx  app.css  main.tsx  player.test.tsx  player.tsx
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json  test_output.txt
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/helpers/: yt-dlp-x86_64-apple-darwin
src-tauri/icons/: icon.icns
src-tauri/src/: download_queue.rs  downloader.rs  error.rs  events.rs  lib.rs  logging.rs  main.rs  redgifs.rs  remedia.rs  remote_control.rs  thumbnail.rs
src-tauri/src/downloader/: commands.rs  events.rs  media_info.rs  mod.rs  playlist.rs  progress.rs  settings.rs  subprocess.rs  ytdlp.rs
src-tauri/tests/: remote_control.rs
src/components/: CustomTitleBar.test.tsx  CustomTitleBar.tsx  DownloadControls.bun.test.tsx  DownloadControls.test.tsx  DownloadControls.tsx  MediaListContextMenu.tsx  MediaTable.test.tsx  MediaTable.tsx  StartupErrorDialog.tsx  data-table.tsx  debug-console.test.tsx  debug-console.tsx  drop-zone.svelte  drop-zone.tsx  error-boundary.tsx  menu-bar.svelte  p-label.svelte  p-label.tsx  settings-dialog.test.tsx  settings-dialog.tsx  settings-window.test.tsx  settings-window.tsx
src/hooks/: use-window-focus.ts  useClipboardMonitor.ts  (+14 more)
(+65 files in other folders)
