# This line needs to come before anything else in Cargo.toml
cargo-features = ["codegen-backend"]

[package]
name        = "remedia"
version     = "0.1.0"
description = "Remedia is a cross-platform application for downloading web media."
authors     = ["Rebecca Clair <rebecca@heliasar.com>"]
edition     = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1       # Allows LLVM to perform better optimization.
lto           = true    # Enables link-time-optimizations.
opt-level     = "s"     # Prioritizes small binary size. Use `3` if you prefer speed.
panic         = "abort" # Higher performance by disabling panic handlers.
strip         = true    # Ensures debug symbols are removed.

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name       = "remedia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri      = { version = "2.9.3", features = ["devtools", "unstable"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell  = "1.19"
tokio      = { version = "1", features = ["process", "io-util", "macros", "time"] }
futures-util = "0.3"
tokio-tungstenite = "0.28"
tauri-plugin-opener            = "2.5"
tauri-plugin-shell             = "2.3"
tauri-plugin-clipboard-manager = "2.3"
tauri-plugin-dialog            = "2.4"
tauri-plugin-fs                = "2.4"
tauri-plugin-notification      = "2.3"
reqwest   = { version = "0.12", features = ["json", "rustls-tls"] }
uuid      = { version = "1", features = ["v4"] }

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
 tauri-plugin-updater = "2"

[features]
default = []
# Enable websocket remote-control integration tests (disabled in CI)
remote-e2e = []

[target.'cfg(all(not(any(target_os = "android", target_os = "ios")), not(target_os = "windows")))'.dependencies]
tauri-plugin-single-instance = "2.3"
